# multi-agent-autogen

./: CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  mcp_server.py  models.py  pyproject.toml  router.py  service.py  tools.py  utils_local.py
data/: travel_data.json
utils/: thinking_streamer.py
